@@ -1,12 +1,0 @@
-Achievo contributed scripts
-===========================
-
-This directory contains scripts that are contributed by users of Achievo. 
-These are generally UNTESTED, and NOT SUPPORTED by the Achievo Open Source 
-project, but they are included in the release as they might be useful. 
-
-For usage information regarding any of the contributions, please see the 
-script header. If you have any questions, please mail the author of the 
-contribution directly. Usually the authors are present on the Achievo
-forums at http://www.achievo.org/forum, so you might also try to find help 
-there.
